force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/clofor_com_cfs__WorkOrder__c.object-meta.xml
<CustomObject>
    <label>W/O</label>
    <nameField>
        <displayFormat>WO-{000000}</displayFormat>
        <label>WORK ORDER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>W/O</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>