force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__AuditItem__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AuditItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Item</label>
    <referenceTo>clofor_com_cfs__AuditItem__c</referenceTo>
    <relationshipLabel>WMS W/O(PHYSICAL INVENTORY CHECK)</relationshipLabel>
    <relationshipName>WorkOrder</relationshipName>
    <type>Lookup</type>
</CustomField>