force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__BadDebtLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebtLocal__c</fullName>
    <label>BAD DEBT(LOCAL)</label>
    <summarizedField>clofor_com_cfs__Billing__c.clofor_com_cfs__UnreceivedBalanceLocal__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__Billing__c.clofor_com_cfs__BadDebtCheckBox__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>clofor_com_cfs__Billing__c.clofor_com_cfs__Currency__c</field>
        <operation>notEqual</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>clofor_com_cfs__Billing__c.clofor_com_cfs__BadDebtorType__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__Billing__c.clofor_com_cfs__WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>