force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillingPeriod__c</fullName>
    <label>Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__AccountingPeriod</valueSetName>
    </valueSet>
</CustomField>