force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__BuyingCommercialValueLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyingCommercialValueLocal__c</fullName>
    <label>BUYING COMMERCIAL VALUE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>