force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__CloFMSShipmentOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CloFMSShipmentOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloFMS-SHIPMENT ORDER ID</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>CloWMS-WORK ORDER</relationshipLabel>
    <relationshipName>WorkOrder</relationshipName>
    <type>Lookup</type>
</CustomField>