force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__ContainerNO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerNO__c</fullName>
    <label>CONTAINER NUMBER</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>