force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__ContainerNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerNumber__c</fullName>
    <label>Container No</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>