force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__ContainerQNTY1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerQNTY1__c</fullName>
    <label>CONTAINER QNTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>