force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__Customer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Customer__c</fullName>
    <label>CUSTOMER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WORK ORDER</relationshipLabel>
    <relationshipName>WORK_ORDER</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>