force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__CustomsClearanceServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomsClearanceServiceRequired__c</fullName>
    <label>CUSTOMS CLEARANCE SERVICE REQUIRED</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CustomsClearanceServiceRequired</valueSetName>
    </valueSet>
</CustomField>