force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__DateDebitSentToCustomer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DateDebitSentToCustomer__c</fullName>
    <label>DATE DEBIT SENT TO CUSTOMER</label>
    <type>Date</type>
</CustomField>