force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__DebitIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DebitIssuedDate__c</fullName>
    <label>DEBIT ISSUED DATE</label>
    <type>Date</type>
</CustomField>