force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__DebitIssueStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DebitIssueStatus__c</fullName>
    <label>DEBIT ISSUE STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DebitIssueStatus</valueSetName>
    </valueSet>
</CustomField>