force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__DestinationWarehouse__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DestinationWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DESTINATION WAREHOUSE ID</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>WORK ORDER (DESTINATION WAREHOUSE)</relationshipLabel>
    <relationshipName>WorkOrderDestinationWarehouseID</relationshipName>
    <type>Lookup</type>
</CustomField>