force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__DestinationWarehouseName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DestinationWarehouseName__c</fullName>
    <formula>clofor_com_cfs__DestinationWarehouse__r.clofor_com_cfs__FacilityName__c</formula>
    <label>DESTINATION WAREHOUSE NAME</label>
    <type>Text</type>
</CustomField>