force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__DispatchServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DispatchServiceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISPATCH SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>