force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__DueDateReceivableCollection__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DueDateReceivableCollection__c</fullName>
    <label>DUE DATE OF RECEIVABLE COLLECTION</label>
    <type>Date</type>
</CustomField>