force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__DueDateWorkCompletion__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DueDateWorkCompletion__c</fullName>
    <label>Due Date of Work Completion</label>
    <type>Date</type>
</CustomField>