force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__EBooking__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EBooking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Booking</label>
    <referenceTo>clofor_com_cfs__EBooking__c</referenceTo>
    <relationshipLabel>WMS/TOS W/O</relationshipLabel>
    <relationshipName>WOEbooking</relationshipName>
    <type>Lookup</type>
</CustomField>