force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__FORWARDING_SERVICE_REQUIRED__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FORWARDING_SERVICE_REQUIRED__c</fullName>
    <label>FORWARDING SERVICE REQUIRED</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ForwardingServiceRequired</valueSetName>
    </valueSet>
</CustomField>