force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__GoodsOwner__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS OWNER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WORK ORDER (GOODS OWNER)</relationshipLabel>
    <relationshipName>WorkOrderGoodsOwner</relationshipName>
    <type>Lookup</type>
</CustomField>