force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__GoodsSOPOApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsSOPOApprovalStatus__c</fullName>
    <formula>IF(NOT(ISBLANK(clofor_com_cfs__PurchasingOrderID__c)) ,  text(clofor_com_cfs__PurchasingOrderID__r.clofor_com_cfs__ApprovalStatus__c) ,

IF(NOT(ISBLANK(clofor_com_cfs__SalesOrderID__c)) ,  text(clofor_com_cfs__SalesOrderID__r.clofor_com_cfs__ApprovalStatus__c),null
)
)</formula>
    <label>Goods S/O or P/O Approval Status</label>
    <type>Text</type>
</CustomField>