force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ItemNumber__c</fullName>
    <label>ITEM NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>