force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__JobReqeustIDFromCustomer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JobReqeustIDFromCustomer__c</fullName>
    <label>JOB REQUEST ID FROM CUSTOMER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>