force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__MaxNoBilling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaxNoBilling__c</fullName>
    <label>MaxNoBilling</label>
    <summarizedField>clofor_com_cfs__Billing__c.clofor_com_cfs__BillingDisplayNo__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__Billing__c.clofor_com_cfs__WorkOrderID__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>