force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__PickingServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PickingServiceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PICKING SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>