force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__PICOfCustomer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICOfCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC OF CUSTOMER</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__Customer__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WORK ORDER</relationshipLabel>
    <relationshipName>WORK_ORDER</relationshipName>
    <type>Lookup</type>
</CustomField>