force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__ProductName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductName__c</fullName>
    <label>PRODUCT NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>