force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__PurchasingOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS PURCHASING ORDER ID</label>
    <referenceTo>clofor_com_cfs__GoodsPurchasingOrder__c</referenceTo>
    <relationshipLabel>WORK ORDER</relationshipLabel>
    <relationshipName>WorkOrder</relationshipName>
    <type>Lookup</type>
</CustomField>