force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__Quantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Quantity__c</fullName>
    <label>PLAN QUANTITY</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>