force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__QuoteID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QuoteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QUOTE ID</label>
    <referenceTo>clofor_com_cfs__Quote__c</referenceTo>
    <relationshipLabel>WMS W/O</relationshipLabel>
    <relationshipName>WorkOrderID</relationshipName>
    <type>Lookup</type>
</CustomField>