force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__RequestSubmissionDateto_Vendor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RequestSubmissionDateto_Vendor__c</fullName>
    <label>Request Submission Date to Vendor</label>
    <type>Date</type>
</CustomField>