force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__ReturnWarehouseName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReturnWarehouseName__c</fullName>
    <formula>clofor_com_cfs__ReturnWarehouseID__r.clofor_com_cfs__FacilityName__c</formula>
    <label>Return Warehouse Name</label>
    <type>Text</type>
</CustomField>