force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__RollupFinalNetWeight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFinalNetWeight__c</fullName>
    <label>ROLLUP FINAL NET WEIGHT FROM W/O &amp; PRO</label>
    <summarizedField>clofor_com_cfs__ConnectWOProduct__c.clofor_com_cfs__FinalNetWeight__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectWOProduct__c.clofor_com_cfs__WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>