force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__RollUpGrossWeightWOProduct__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollUpGrossWeightWOProduct__c</fullName>
    <label>ROLLUP GROSS WEIGHT FROM W/O &amp; PRODUCT</label>
    <summarizedField>clofor_com_cfs__ConnectWOProduct__c.clofor_com_cfs__GrossWeightKG__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectWOProduct__c.clofor_com_cfs__WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>