force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__RollupUnreceivedBalanceOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupUnreceivedBalanceOfSellingUSD__c</fullName>
    <label>ROLLUP UNRECEIVED BAL OF SELLING(USD)</label>
    <summarizedField>clofor_com_cfs__Billing__c.clofor_com_cfs__UnreceivedBalanceUSD__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__Billing__c.clofor_com_cfs__Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__Billing__c.clofor_com_cfs__WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>