force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__SalesOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SalesOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS SALES ORDER ID</label>
    <referenceTo>clofor_com_cfs__SALES_ORDER__c</referenceTo>
    <relationshipLabel>WORK ORDER</relationshipLabel>
    <relationshipName>SalesOrderID</relationshipName>
    <type>Lookup</type>
</CustomField>