force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__ScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ScheduleDate__c</fullName>
    <label>SCHEDULE DATE</label>
    <type>Date</type>
</CustomField>