force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__StartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>