force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__TransportID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransportID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport ID</label>
    <referenceTo>clofor_com_cfs__Cargo_Delivery__c</referenceTo>
    <relationshipLabel>W/O</relationshipLabel>
    <relationshipName>W_O</relationshipName>
    <type>Lookup</type>
</CustomField>