force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__TruckingServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TruckingServiceRequired__c</fullName>
    <label>TRUCKING SERVICE REQUIRED</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__TruckingServiceRequired</valueSetName>
    </valueSet>
</CustomField>