force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__WarehouseBasicServiceType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WarehouseBasicServiceType__c</fullName>
    <label>WAREHOUSE BASIC SERVICE TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__WarehouseBasicServiceType</valueSetName>
    </valueSet>
</CustomField>