force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__WarehouseID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WarehouseID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WAREHOUSE ID</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>WORK ORDER (ORIGIN WAREHOUSE)</relationshipLabel>
    <relationshipName>WORK_ORDER</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>