force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__WarehouseName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WarehouseName__c</fullName>
    <formula>clofor_com_cfs__WarehouseID__r.clofor_com_cfs__FacilityName__c</formula>
    <label>WAREHOUSE NAME</label>
    <type>Text</type>
</CustomField>