force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/fields/clofor_com_cfs__WOSubCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WOSubCategory__c</fullName>
    <label>W/O Sub Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__WOSubCategory</valueSetName>
    </valueSet>
</CustomField>