force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__CombinedTransfer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CombinedTransfer</fullName>
    <active>true</active>
    <description>Massive cargo transfer after combining many cargo to the same destination</description>
    <label>Combined Transfer</label>
</RecordType>