force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__CrossDock.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CrossDock</fullName>
    <active>true</active>
    <description>After Cargo inbound, directly cargo outbound without storage</description>
    <label>Cross-Docking</label>
</RecordType>