force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__Disposal.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Disposal</fullName>
    <active>true</active>
    <description>Dispose cargo due to damaged or expired</description>
    <label>Disposal</label>
</RecordType>