force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__ExpressCargoTransfer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ExpressCargoTransfer</fullName>
    <active>true</active>
    <description>Express cargo for 1 client to manage inbound and outsound</description>
    <label>Express</label>
</RecordType>