force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__Inbound.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Inbound</fullName>
    <active>true</active>
    <description>Cargo Inbound coming into warehouse and store in warehouse</description>
    <label>Inbound</label>
</RecordType>