force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__Outbound.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Outbound</fullName>
    <active>true</active>
    <description>Cargo outbound from Warehouse</description>
    <label>Outbound</label>
</RecordType>