force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__PeriodicBilling.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__PeriodicBilling</fullName>
    <active>true</active>
    <description>To consolidate Selling or Buying based on defined period such as rental fee, etc.</description>
    <label>Periodic Billing</label>
</RecordType>