force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__Relocation.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Relocation</fullName>
    <active>true</active>
    <description>Move from one location to another location inside of the same warehouse</description>
    <label>Relocation</label>
</RecordType>