force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__ReturnFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ReturnFromCustomer</fullName>
    <active>true</active>
    <description>Return from customer due to damage/cancel/expired</description>
    <label>Return from customer</label>
</RecordType>