force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__ReturnToVendor.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ReturnToVendor</fullName>
    <active>true</active>
    <description>Return to vendor due to damage/cancel/expired</description>
    <label>Return to vendor</label>
</RecordType>