force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/recordTypes/clofor_com_cfs__Transfer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Transfer</fullName>
    <active>true</active>
    <description>Transfer Cargo for 1 client to another warehouse</description>
    <label>Single Transfer</label>
</RecordType>