force-app/main/default/objects/clofor_com_cfs__WorkOrder__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__WorkOrderStatus__c</columns>
    <columns>clofor_com_cfs__WorkOrderServiceStatus__c</columns>
    <columns>clofor_com_cfs__Customer__c</columns>
    <columns>clofor_com_cfs__WarehouseID__c</columns>
    <columns>clofor_com_cfs__DestinationWarehouseName__c</columns>
    <columns>clofor_com_cfs__ScheduleDate__c</columns>
    <columns>clofor_com_cfs__ActualDate__c</columns>
    <columns>clofor_com_cfs__CargoMode__c</columns>
    <columns>clofor_com_cfs__NETWeight__c</columns>
    <columns>clofor_com_cfs__GrossWeight__c</columns>
    <columns>clofor_com_cfs__Measurement__c</columns>
    <columns>clofor_com_cfs__WarehouseBasicServiceType__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>0.All</label>
</ListView>